# rust-adminYH

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile.admin-api  Dockerfile.desktop-web  docker-compose.ci.yml
.cargo/: config.toml
.github/workflows/: ci.yml
apps/desktop/: README.md
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/web/: README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts  vitest.config.ts
apps/desktop/web/e2e/: account-settings.spec.ts  business-list-states.spec.ts  login.spec.ts  real-api.spec.ts  system-list-states.spec.ts  system-write-flows.spec.ts
apps/desktop/web/e2e/support/: admin-session.ts  legacy-responses.ts
apps/desktop/web/src/: App.tsx  config.test.ts  config.ts  fonts.css  index.css  main.tsx
apps/desktop/web/src/api/: auth.test.ts  auth.ts  client.test.ts  client.ts  companies.test.ts  companies.ts  dashboard.test.ts  dashboard.ts  demo.ts  memory.test.ts  memory.ts  menus.test.ts  (+13 more)
crates/admin-api/: Cargo.toml
crates/admin-api/src/: config.rs  lib.rs  logging.rs  main.rs  response.rs  state.rs
crates/admin-api/src/handlers/: auth.rs  chart.rs  company.rs  health.rs  memory.rs  menu.rs  mod.rs  order.rs  receipt.rs  resources.rs  role.rs  user.rs
crates/admin-api/src/middleware/: auth.rs  request_id.rs
crates/admin-api/src/routes/: mod.rs
crates/admin-api/tests/: auth_login.rs  auth_session.rs  authorization_matrix.rs  chart.rs  company.rs  health.rs  menu.rs  mysql_api_compatibility.rs  order_receipt.rs  resources.rs  role.rs  route_compatibility.rs  user.rs
crates/admin-core/: Cargo.toml
crates/admin-core/src/: error.rs  lib.rs  response.rs  validation.rs
crates/admin-core/src/auth/: mod.rs  password.rs  permissions.rs
crates/admin-core/src/domain/: chart.rs  company.rs  health.rs  menu.rs  mod.rs  order.rs  user.rs
crates/admin-core/src/dto/: auth.rs  chart.rs  company.rs  health.rs  menu.rs  mod.rs  order.rs  resource.rs  role.rs  user.rs
crates/admin-core/src/services/: auth.rs  chart.rs  company.rs  health.rs  menu.rs  mod.rs  order.rs  role.rs  user.rs
crates/admin-core/tests/: response.rs
crates/admin-db/: Cargo.toml
crates/admin-db/src/: lib.rs  pagination.rs  pool.rs  transaction.rs
crates/admin-db/src/migrations/: 202607010001_init_compat_schema.sql  mod.rs
crates/admin-db/src/repositories/: chart.rs  company.rs  health.rs  menu.rs  mod.rs  order.rs  role.rs  sql.rs  user.rs
crates/admin-db/tests/: compat_schema.rs  mysql_chart_repository.rs  mysql_company_repository.rs  mysql_health_repository.rs  mysql_order_repository.rs  mysql_role_menu_repository.rs  mysql_user_auth_repository.rs
crates/admin-migration/: Cargo.toml
crates/admin-migration/src/: lib.rs  main.rs
docker/nginx/: desktop-web.conf
docs/: api-compatibility.md  database-migration.md  rebuild-plan.md
scripts/: check-all.sh  dev-local-app.sh  install-frontend-deps.sh  seed-docker-e2e.sql  seed-migration-fixture.sql  test-backend-auth-contract.mjs  test-backend-mysql-contract.mjs  test-backend-mysql-smoke.sh  test-backend-pagination-contract.mjs  test-backend-response-contract.mjs  test-backend-route-contract.mjs  test-backend-sql-helper-contract.mjs  test-backend-validation-contract.mjs  test-backend.sh  test-docker-contract.mjs  test-docker.sh  test-frontend-architecture.mjs  test-frontend-async-action-contract.mjs  test-frontend-detail-loader-contract.mjs  test-frontend-header-action-contract.mjs  test-frontend-mutation-contract.mjs  test-frontend-pagination-contract.mjs  test-frontend.sh  test-migration-smoke.sh  test-migration.sh  test-release-contract.mjs  test-release-preflight.mjs  test-tauri-build.sh  test-tauri-contract.sh
tests/: workspace_smoke.rs
(+103 files in other folders)
