[package]
name = "admin-migration"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
admin-core.workspace = true
admin-db.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
