[package]
name = "admin-yh-desktop"
version = "0.1.0"
description = "宇涵物流订单系统桌面端"
authors = ["adminYH"]
edition = "2021"

[lib]
name = "admin_yh_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
